--- a/AS2/project/templates/project/profile.html
+++ b/AS2/project/templates/project/profile.html
@@ -56,7 +56,7 @@
     <div class="ml-12 mt-12">
       <h1 class="text-3xl font-bold mb-10">AutoHub</h1>
       <nav class="space-y-6">
-        <a href="#" class="block text-white">HOME</a>
+        <a href="index.html" class="block text-white">HOME</a>
         <a href="#" class="block text-white">SUV</a>
         <a href="#" class="block text-white">MPV</a>
         <a href="#" class="block text-white">HATCHBACK</a>
@@ -69,7 +69,7 @@
         <a href="#" class="flex items-center space-x-2 text-white">
           <i class="fas fa-info-circle"></i><span>About</span>
         </a>
-        <a href="#" class="flex items-center space-x-2 text-white">
+        <a href="login.html" class="flex items-center space-x-2 text-white">
           <i class="fas fa-sign-out-alt"></i><span>Log out</span>
         </a>
       </div>
